--- a/text.html
+++ b/text.html
@@ -57,13 +57,13 @@
     margin-top: 5%;
   }
   h2 {
-    position: absolute
+    position: absolute;
     margin-top: 20px;
     font-size: 24px;
     font-family: 'cursive', sanshserif;
     font-weight: 600;
     color: #888;
-    text-lign: center;
+    text-align: center;
   }
   #brightModeBtn {
     position: absolute;
