--- a/tb.html
+++ b/tb.html
@@ -17,7 +17,7 @@ body {
   flex-direction:row;
   border:2px dashed #358;
   width:99%;
-  height:5vh;
+  height:5dvh;
 }
 #txtBox {
   border:none;
@@ -25,6 +25,7 @@ body {
   background-color:#021133;
   width:80%;
   outline: 0;
+  font-weight: 600;
   font-size: 22px;
 }
 #loadBtn {
@@ -35,15 +36,19 @@ body {
   font-size:20px;
   color:#369
 }
-::placeholder {font-size:18px}
+::placeholder {
+  font-size: 22px;
+  font-weight: 600;
+  color: #a4a4a4;
+}
 #viewBox {
       width: 99%;
-      height: 95vh;
+      height: 90dvh;
       border-radius: 4px;
       border: 2px solid #333;
       overflow-y: scroll;
       background-color: #02121b;
-      margin: 5px 0px 4px 0px;
+      margin: 4px 0px 2px 0px;
       display: flex;
       flex-direction: row;
     }
@@ -72,13 +77,16 @@ async function viewImages() {
 var range = document.getElementById('txtBox').value;
 var parts = range.split('-');
 var start = +parts[0], end = +parts[1]; // The Unary '+' operator is shorthand for converting a string(parts[0] is returned as a string from "split('-')" method) to a number. It is similar to "parseInt(parts[0])" and "Number(parts[0])".
-if (end-start > 20) { alert('Range must be less than 20. It is useful for ensuring less bandwidth usage during the Thumbnail Fetching process.'); return; // "return" would exit the function. }
+if (end-start > 20) {
+  alert('Range must be less than 20. It is useful for ensuring less bandwidth usage during the Thumbnail Fetching process.'); 
+  return; // "return" would exit the function. 
+}
 var response = await fetch("https://srbo3gia676hprqy.public.blob.vercel-storage.com/KV-Store-Saved-TB-Link-Thumbnails.json");
 var json = await response.json();
 var jsonrange = json.slice(start, end+1); // In "array.slice()" method 1st number is inclusive while 2nd number is not.
 let count = start;
 for ( var obj of jsonrange ) {
-    var link = obj.url, image = obj.img;
+    var link = obj.str, image = obj.url;
     var box = document.createElement('div');
     box.className = 'imgBox';
     box.innerHTML = ` 
@@ -87,8 +95,8 @@ for ( var obj of jsonrange ) {
     `;
     document.getElementById('viewBox').appendChild(box);
     count++;
-}
-
+  }
+}                   
 </script>
 </body>
 </html>
