--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid/cors" style="background-color: #000; padding: 20px 60px"></a></p>
+    <p><a href="tboxThumbnail" style="background-color: #000; padding: 20px 60px"></a></p>
     
 </center>
 
