--- a/JS-Notebook/index.html
+++ b/JS-Notebook/index.html
@@ -25,22 +25,22 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel='stylesheet' href='/style.css' />
+  <link rel='stylesheet' href='JS-Notebook/style.css' />
   <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"></script>
 
-  <script src="show-hint.js"></script>
-  <link rel='stylesheet' href='show-hint.css' />
-  <script src="javascript-hint.js"></script>
-  <script src="closebrackets.js"></script>
-  <script src="matchbrackets.js"></script>
+  <script src="JS-Notebook/show-hint.js"></script>
+  <link rel='stylesheet' href='JS-Notebook/show-hint.css' />
+  <script src="JS-Notebook/javascript-hint.js"></script>
+  <script src="JS-Notebook/closebrackets.js"></script>
+  <script src="JS-Notebook/matchbrackets.js"></script>
 
 
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand" href="/"><img style="width: 40px; width: 40px; margin-left: 5px; border-radius: 10px;"
-        src="https://1nrp.github.io/1/Images/N-Logo1.png" />JS Notebook</a>
+    <a class="navbar-brand" href="/"><img style="width: 30px; height: 30px; margin-left: 5px; border-radius: 50px;"
+        src="https://1nrp.github.io/1/Images/N-Logo1.png" /> JS Notebook</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -175,11 +175,11 @@
 
   <nav class="navbar-dark bg-dark fixed-bottom">
     <div class="col-md-12 text-center">
-      <p style="color: white;"> © 2020 Dnotebook</p>
+      <p style="color: #fff888;"> JS Notebook</p>
     </div>
   </nav>
-  <script src="index.js"></script>
-  <script src="utils.js"></script>
+  <script src="JS-Notebook/index.js"></script>
+  <script src="JS-Notebook/utils.js"></script>
 
 </body>
 
