--- a/text.html
+++ b/text.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
 <title>Nihar's Text Reader</title>
 <style>
   body {
@@ -57,13 +58,11 @@
     margin-top: 5%;
   }
   h2 {
-    position: absolute;
     margin-top: 20px;
     font-size: 24px;
-    font-family: 'cursive', sanshserif;
+    font-family: 'cursive', sans-serif;
     font-weight: 600;
     color: #888;
-    text-align: center;
   }
   #brightModeBtn {
     position: absolute;
