--- a/JS-Notebook/index.html
+++ b/JS-Notebook/index.html
@@ -25,14 +25,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel='stylesheet' href='JS-Notebook/style.css' />
+  <link rel='stylesheet' href='style.css' />
   <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"></script>
 
-  <script src="JS-Notebook/show-hint.js"></script>
-  <link rel='stylesheet' href='JS-Notebook/show-hint.css' />
-  <script src="JS-Notebook/javascript-hint.js"></script>
-  <script src="JS-Notebook/closebrackets.js"></script>
-  <script src="JS-Notebook/matchbrackets.js"></script>
+  <script src="show-hint.js"></script>
+  <link rel='stylesheet' href='show-hint.css' />
+  <script src="javascript-hint.js"></script>
+  <script src="closebrackets.js"></script>
+  <script src="matchbrackets.js"></script>
 
 
 </head>
@@ -178,8 +178,8 @@
       <p style="color: #fff888;"> JS Notebook</p>
     </div>
   </nav>
-  <script src="JS-Notebook/index.js"></script>
-  <script src="JS-Notebook/utils.js"></script>
+  <script src="index.js"></script>
+  <script src="utils.js"></script>
 
 </body>
 
