--- a/JS-Notebook/index.html
+++ b/JS-Notebook/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Nihar's JavaScript Notebook</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
+  <meta charset="utf-8">
+  <title>Nihar's Websites</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
   </link>
   <script
