--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
-    <p><a href="JS-Notebook/index.html">JS Notebook</a></p>
+    <p><a href="JS-Notebook">JS Notebook</a></p>
     <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid/cors" style="background-color: #000; padding: 20px 60px"></a></p>
